--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>用户协议</h1>
-<p><i>杭州比特律动科技有限公司</i>（以下简称“我们”）依据本协议为用户（以下简称“你”）提供<i>Fliqlo翻页时钟</i>服务。本协议对你和我们均具有法律约束力。</p>
+<p><i>杭州比特律动科技有限公司</i>（以下简称“我们”）依据本协议为用户（以下简称“你”）提供<i>FlipTick翻页时钟</i>服务。本协议对你和我们均具有法律约束力。</p>
 <h4>一、本服务的功能</h4>
 <p>你可以使用本服务显示翻页时钟、悬浮时钟。</p>
 <h4>二、责任范围及限制</h4>
